--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ django-otp==1.1.4
 django-tailwind==3.4.0
 djlint==1.19.12
 EditorConfig==0.12.3
+gunicorn==20.1.0
 html-tag-names==0.1.2
 html-void-elements==0.1.0
 jinja2-time==0.2.0
@@ -27,7 +28,6 @@ qrcode==7.3.1
 regex==2022.10.31
 requests-oauthlib==1.3.1
 sqlparse==0.4.3
-tailwindcss==0.0.1
 text-unidecode==1.3
 tqdm==4.64.1
 whitenoise==6.3.0
